--- a/백준열_포트폴리오_.md
+++ b/백준열_포트폴리오_.md
@@ -2,9 +2,8 @@
 
 ## 📌 기본 정보
 - **이름:** 백준열
-- **연락처:** [010-5336-2709]
 - **이메일:** [w1126wns@naver.com]
-- **GitHub:** [GitHub 링크]
+- **GitHub:** [https://github.com/Baekjunyeol]
 - **블로그:** [블로그 링크]
 
 ---
@@ -13,21 +12,24 @@
 
 | 기술 | 숙련도 | 사용 경험 |
 |------|------|------|
-| **Python** | ⭐⭐⭐⭐ | 데이터 분석, 백엔드 개발 (Flask/Django) |
+| **Python** | ⭐⭐⭐⭐⭐ | 데이터 분석, 머신러닝, Pygame, 백엔드 개발 (Flask) |
 | **SQL** | ⭐⭐⭐⭐ | MySQL, PostgreSQL 활용, DB 설계 및 최적화 경험 |
-| **Java** | ⭐⭐ | 웹 애플리케이션 개발, 알고리즘 문제 해결 |
-
+| **Java** | ⭐⭐ | 알고리즘을 통한 프로젝트, 기본적인 객체 개념 |
+------
+- **프론트엔드**: HTML
+- **백엔드**: Python, Flask, Django, 
+- **데이터베이스**: Mysql, SQLite
 ---
 
 ## 💻 프로젝트 경험
 
-### 🛒 1. 온라인 쇼핑몰 데이터 최적화 시스템 개발
-- **설명:** 온라인 쇼핑몰의 데이터 관리 및 최적화를 위한 시스템 개발
-- **기술 스택:** Python, Django, MySQL
+### 🛒 1. 데이터 관리와 처리 기술을 통한 온라인 쇼핑몰 제작
+- **설명:** 가상 쇼핑몰 웹사이트를 DB와 연계 및 구축
+- **기술 스택:** Python, HTML , MySQL
 - **성과:**
-  - 데이터 처리 속도 30% 향상
-  - DB 구조 최적화로 서버 부하 감소
-- **GitHub:** [프로젝트 링크]
+  - 웹 프레임워크 설정, 데이터베이스 테이블을 직접 설계함.
+  - 데이터베이스 연동이 가능하며, Python에서 SQLite3를 사용하여 데이터 조작가능,
+- **GitHub:** [[프로젝트 링크](https://github.com/Baekjunyeol/Design-Implementation)]
 
 ### 📊 2. SQL 기반 데이터 분석 자동화
 - **설명:** SQL을 활용하여 데이터 분석 및 보고서 자동화 시스템 구축
@@ -40,14 +42,15 @@
 ---
 
 ## 🏅 자격증 & 기타 경험
-- 📜 **SQLD 자격증** (취득 연도: [연도 기입])
-- 🖥️ **정보처리기사 (필기 합격)** (취득 연도: [연도 기입])
-- 💼 **IT 관련 인턴십 및 프로젝트 경험 다수**
+- 📜 **SQLD 자격증** (취득 연도: [2024])
+- 🖥️ **정보처리기사 (필기 합격)** (취득 연도: [2024])
+- 💼 **IT 관련 교내 프로젝트 경험 다수**
 
 ---
 
 ## 🔥 앞으로의 목표
 - 데이터 최적화 및 자동화 프로젝트 확대
+- ML
 - 대규모 데이터베이스 관리 및 성능 최적화 경험 쌓기
 - 오픈소스 기여 및 협업 경험 확장
 
