--- a/백준열_포트폴리오_.md
+++ b/백준열_포트폴리오_.md
@@ -1,10 +1,9 @@
-# 개발자 포트폴리오 🛠️
+# 개발자를 꿈꾸는 백준열 포트폴리오 🛠️
 
 ## 📌 기본 정보
 - **이름:** 백준열
 - **이메일:** [w1126wns@naver.com]
 - **GitHub:** [https://github.com/Baekjunyeol]
-- **블로그:** [블로그 링크]
 
 ---
 
@@ -15,10 +14,13 @@
 | **Python** | ⭐⭐⭐⭐⭐ | 데이터 분석, 머신러닝, Pygame, 백엔드 개발 (Flask) |
 | **SQL** | ⭐⭐⭐⭐ | MySQL, PostgreSQL 활용, DB 설계 및 최적화 경험 |
 | **Java** | ⭐⭐ | 알고리즘을 통한 프로젝트, 기본적인 객체 개념 |
+| **HTML/CSS** | ⭐⭐ | 웹페이지 설계, 간단한 디자인, 기초적 스타일링  |
+| **C#** | ⭐⭐ | 매우 기초적인 개념, Unity로 2D, 3D 게임을 간단하게 만든 경험   |
 ------
 - **프론트엔드**: HTML
 - **백엔드**: Python, Flask, Django, 
 - **데이터베이스**: Mysql, SQLite
+- **기타 툴** : Jupyter notebook, visual studio code, PyCharm
 ---
 
 ## 💻 프로젝트 경험
@@ -31,12 +33,12 @@
   - 데이터베이스 연동이 가능하며, Python에서 SQLite3를 사용하여 데이터 조작가능,
 - **GitHub:** [[프로젝트 링크](https://github.com/Baekjunyeol/Design-Implementation)]
 
-### 📊 2. SQL 기반 데이터 분석 자동화
-- **설명:** SQL을 활용하여 데이터 분석 및 보고서 자동화 시스템 구축
+### 📊 2. 계층적 군집 분석을 활용한 데이터 시각화 및 군집화 비교
+- **설명:** 데이터를 활용해 SciPy 라이브러리의 함수를 이용해 군집 분석 수행
 - **기술 스택:** Python, SQL (MySQL, PostgreSQL)
 - **성과:**
-  - 수작업 데이터 분석 시간 40% 절감
-  - 자동화된 보고서 생성 기능 구현
+  - 군집화 기법(Single, Complete, Average, Centroid)의 차이 이해
+  - 데이터 시각화, 군집 분석 경험을 습득.
 - **GitHub:** [프로젝트 링크]
 
 ---
@@ -50,8 +52,9 @@
 
 ## 🔥 앞으로의 목표
 - 데이터 최적화 및 자동화 프로젝트 확대
-- ML
+- 머신러닝 구체화된 재학습
 - 대규모 데이터베이스 관리 및 성능 최적화 경험 쌓기
-- 오픈소스 기여 및 협업 경험 확장
+- 오픈소스를 통한 기여 및 백엔드 경험 쌓기
 
-📢 **더 많은 프로젝트를 확인하려면?** 👉 [GitHub 링크]
+📢 **더 많은 프로젝트를 확인하려면?** 👉 [https://github.com/Baekjunyeol]
+
