--- a/백준열_포트폴리오_.md
+++ b/백준열_포트폴리오_.md
@@ -39,7 +39,7 @@
 - **성과:**
   - 군집화 기법(Single, Complete, Average, Centroid)의 차이 이해
   - 데이터 시각화, 군집 분석 경험을 습득.
-- **GitHub:** [프로젝트 링크]
+- **GitHub:** [[프로젝트 링크](https://github.com/Baekjunyeol/Machine-Learning)]
 
 ---
 
