--- a/백준열_포트폴리오_.md
+++ b/백준열_포트폴리오_.md
@@ -1,4 +1,4 @@
-# 개발자를 꿈꾸는 백준열 포트폴리오 🛠️
+# 더 나은 기술자를 꿈꾸는 백준열 포트폴리오 🛠️
 
 ## 📌 기본 정보
 - **이름:** 백준열
@@ -13,33 +13,51 @@
 |------|------|------|
 | **Python** | ⭐⭐⭐⭐⭐ | 데이터 분석, 머신러닝, Pygame, 백엔드 개발 (Flask) |
 | **SQL** | ⭐⭐⭐⭐ | MySQL, PostgreSQL 활용, DB 설계 및 최적화 경험 |
-| **Java** | ⭐⭐ | 알고리즘을 통한 프로젝트, 기본적인 객체 개념 |
+| **Java** | ⭐⭐⭐ | 알고리즘을 통한 프로젝트, 기본적인 객체 개념 |
+| **C** | ⭐⭐⭐ | 메소드 지향적 구조, 포인터에 대한 이해, C 개발자와의 소통이 어느정도 가능한 수준 |
 | **HTML/CSS** | ⭐⭐ | 웹페이지 설계, 간단한 디자인, 기초적 스타일링  |
-| **C#** | ⭐⭐ | 매우 기초적인 개념, Unity로 2D, 3D 게임을 간단하게 만든 경험   |
+| **C#,C++** | ⭐⭐ | 매우 기초적인 개념, Unity로 2D, 3D 게임을 간단하게 만든 경험   |
 ------
-- **프론트엔드**: HTML
-- **백엔드**: Python, Flask, Django, 
-- **데이터베이스**: Mysql, SQLite
-- **기타 툴** : Jupyter notebook, visual studio code, PyCharm
+- **프로그래밍 언어**: Python, Java, C, C++(기초)  
+- **프론트엔드**: HTML, CSS
+- **백엔드**: Python, Flask
+- **데이터베이스**: MySQL, SQLite3
+- **데이터 처리·분석**: Pandas, Matplotlib, Scikit-learn, Seaborn
+- **자동화 및 문서화**: openpyxl, xlsxwriter, requests, sqlite3
+- **개발 환경 및 협업**: Jupyter Notebook, Visual Studio Code, PyCharm, Git, GitHub
 ---
 
 ## 💻 프로젝트 경험
 
 ### 🛒 1. 데이터 관리와 처리 기술을 통한 온라인 쇼핑몰 제작
 - **설명:** 가상 쇼핑몰 웹사이트를 DB와 연계 및 구축
-- **기술 스택:** Python, HTML , MySQL
+- **기술 스택:** Python, HTML , SQLite3 , flask
 - **성과:**
   - 웹 프레임워크 설정, 데이터베이스 테이블을 직접 설계함.
-  - 데이터베이스 연동이 가능하며, Python에서 SQLite3를 사용하여 데이터 조작가능,
+  - Flask 통해 서버를 구축한 뒤, 실시간 연동 수행
+  - 데이터베이스 연동이 가능하며, Python에서 SQLite3를 사용하여 데이터 조작가능
 - **GitHub:** [[프로젝트 링크](https://github.com/Baekjunyeol/Design-Implementation)]
 
-### 📊 2. 계층적 군집 분석을 활용한 데이터 시각화 및 군집화 비교
-- **설명:** 데이터를 활용해 SciPy 라이브러리의 함수를 이용해 군집 분석 수행
-- **기술 스택:** Python, SQL (MySQL, PostgreSQL)
+### 📊 2. 대학생 식당 선호도 조사 및 데이터 시각화 자동화 시스템 개발
+- **설명:** 사용자 피드백 수집 및 재처리 가능 구조로 DB 스키마 설계 (재조사 없이 반복 사용 가능 구조로 구성)
+- **기술 스택:** Python(Pandas, Matplotlib), SQL 
 - **성과:**
-  - 군집화 기법(Single, Complete, Average, Centroid)의 차이 이해
-  - 데이터 시각화, 군집 분석 경험을 습득.
-- **GitHub:** [[프로젝트 링크](https://github.com/Baekjunyeol/Machine-Learning)]
+  - 행사 준비 자동화 시스템 구축을 통해 전체 준비 기간을 5일 단축하였으며,
+  - 데이터 기반 의사결정 체계를 확립해 교수진으로부터 업무 효율성 및 기획 역량에 대해 높은 평가를 받았습니다.
+- **GitHub:** [[프로젝트 링크](https://github.com/Baekjunyeol/data-engineering)]
+
+### 🏙️ 3. 서울시 지역구별 인구 데이터 분석 및 DB 구축
+- **설명:** 공공데이터를 활용해 서울시 각 지역의 인구 데이터를 분석하고, DB 설계 및 문서화까지 수행
+- **기술 스택:** Python (Pandas), SQLite3, Excel
+- **성과:**
+  - 공공데이터포털에서 제공하는 서울시 인구 데이터를 수집 및 전처리
+  - 내국인/외국인/성별/연령대 등 다차원 인구 정보를 정리하고 이상치 제거
+  - 분석 목적에 따라 컬럼 구성 및 그룹화를 수행하고, 가공된 데이터를 SQLite로 저장
+  - 데이터베이스 연동이 가능하며, Python에서 SQLite3를 사용하여 데이터 조작가능
+  - 데이터 수집 → 전처리 → 저장 → 문서화까지의 전체 흐름을 실습 경험으로 수행
+- **GitHub:** [[프로젝트 링크](https://github.com/Baekjunyeol/Design-Implementation)]
+
+
 
 ---
 
@@ -47,7 +65,6 @@
 - 📜 **SQLD 자격증** (취득 연도: [2024])
 - 🖥️ **정보처리기사 (필기 합격)** (취득 연도: [2024])
 - 💼 **IT 관련 교내 프로젝트 경험 다수**
-
 ---
 
 ## 🔥 앞으로의 목표
@@ -55,6 +72,7 @@
 - 머신러닝 구체화된 재학습
 - 대규모 데이터베이스 관리 및 성능 최적화 경험 쌓기
 - 오픈소스를 통한 기여 및 백엔드 경험 쌓기
+- 체계적인 데이터 분석 프로젝트 수행
 
 📢 **더 많은 프로젝트를 확인하려면?** 👉 [https://github.com/Baekjunyeol]
 
